test/error/parse/ErrMin.mod
MODULE ErrMin;
CONST A = 1 MOD 0;
END ErrMin.
